minor jlink improvements