@@ -24,19 +24,17 @@ application {
 jlink {
     imageName.set(project.name)
     moduleName.set(application.mainModule)
-    options = ["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages", "--add-modules",
+    options = ["--strip-debug", "--no-header-files", "--no-man-pages", "--add-modules",
                "is.codion.framework.db.http,is.codion.plugin.logback.proxy"]
 
     addExtraDependencies("jackson-core", "jackson-databind", "jackson-annotation")
 
     launcher {
         jvmArgs = applicationDefaultJvmArgs
-        jvmArgs += ["--add-reads", "chinook.merged.module=org.slf4j"]//for sslcontext-kickstart
     }
 
     jpackage {
         imageName = "Chinook-Load-Test-Http"
-        appVersion = project.version.replace("-SNAPSHOT", "")
         if (org.gradle.internal.os.OperatingSystem.current().linux) {
             installerType = "deb"
             icon = "../chinook.png"
